feat: Commax 기능 보완 및 런타임 운영 설정 (#19)
* 빠진 docker compose 설명 추가 (#9)

* chore: 예시 yml 의 image명만 수정

* 사용법 추가 commit

* fix: 빠진 설명 추가

* feat: 재부팅 옵션 추가 (#16)

* feat: db연결 h2로 수정 -> 기존의 문제점(sqlite의 쓰기 lock 관련 이슈) 해결 (#17)

Co-authored-by: 홍현표 <gusvy0220@pangpany.co.kr>

* feat: 미작동하던 팬, 패킷 추가 및 엘리베이터 확인 등 기타 기능 및 화면에서 여러 확인 툴 추가 (#18)

Co-authored-by: 홍현표 <gusvy0220@pangpany.co.kr>

* fix: 로그 보존 정책 추가

* chore: 특정 고정시간이 아닌, 24시간 기준으로 실행하게 수정

* feat: 패킷 로그 제거 및 seen_packet 기반 유니크 관측으로 전환

매 수신 PacketLog 적재·retention·/packet-logs 페이지를 없애고 SUCCESS 패킷의
유니크 raw hex만 seen_packet에 영구 저장한다. 커버리지·관측 패킷 UI 추가,
기기 관리 페이지는 활성/비활성 버튼으로 변경, SQL 초기화 스크립트 오류 수정.

Co-authored-by: Cursor <cursoragent@cursor.com>

* Show packet observations by device

* fix: EV 층수 십진 표시 및 커버리지 패킷 kind 중복 수정

JPA 다중 JOIN FETCH 카테시안 곱으로 packetTypes가 중복 로드되던 문제를 3단계 fetch로 해결하고, EV floor HEX 값을 MQTT 발행 시 십진수로 변환합니다.

Co-authored-by: Cursor <cursoragent@cursor.com>

* fix: DeviceType fetch LazyInitializationException 및 playwright-cli 스킬 추가

findAllWithFullStructure에서 lazy fields 접근으로 Docker 기동이 실패하던 문제를 ID 기반 후속 쿼리와 @Transactional로 수정하고, 웹 UI 검증용 playwright-cli 스킬을 추가합니다.

Co-authored-by: Cursor <cursoragent@cursor.com>

* feat: add ACK command queue strategy

* feat: add opt-in device activation

* feat: complete outlet command mapping

* feat: add H2M-based elevator support

* feat: log command transmit and outcomes

* feat: add SQLite schema and log retention operations

* feat: add device activation settings page

* feat: rebase requirements on main UI and preserve sqlite migrations

* feat: publish elevator call button discovery

* feat: add settings to navigation

* feat: persist runtime connection settings

* fix: reconcile legacy sqlite device schema

---------

Co-authored-by: 홍현표 <gusvy0220@pangpany.co.kr>
Co-authored-by: Cursor <cursoragent@cursor.com>